--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@ dist
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log\*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # local env files
 
@@ -32,3 +34,38 @@ yarn-error.log\*
 # Packed plugin
 
 plugin.zip
+
+# Logs
+logs
+*.log
+
+# Build directories
+node_modules
+dist
+dist-ssr
+*.local
+.build
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Framer
+.framer
+*.framerx
+.vercel
+.output
