--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "pack": "npx framer-plugin-tools@latest pack"
+    "pack": "npx framer-plugin-tools@latest pack",
+    "predev": "pnpm run build --project ../shared"
   },
   "dependencies": {
+    "@framer-plugin/shared": "workspace:*",
     "framer-plugin": "^3",
     "react": "^18",
     "react-dom": "^18",
