--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts --env-file .env"
+    "start": "node -r module-alias/register dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts --env-file .env",
+    "predev": "pnpm run build --project ../shared"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@framer-plugin/shared": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "module-alias": "^2.2.3",
     "replicate": "^1.0.1",
     "zod": "^3.22.4"
   },
@@ -24,6 +27,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
+  },
+  "_moduleAliases": {
+    "@": "dist",
+    "@shared": "../shared/dist"
   }
 }
