--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "pack": "npx framer-plugin-tools@latest pack",
-    "predev": "pnpm run build --project ../shared"
+    "pack": "npx framer-plugin-tools@latest pack"
   },
   "dependencies": {
     "@framer-plugin/shared": "workspace:*",
