--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@framer-plugin/shared": "workspace:*",
+    "@tailwindcss/vite": "^4.1.3",
     "framer-plugin": "^3",
     "react": "^18",
     "react-dom": "^18",
     "replicate": "^1.0.1",
+    "tailwindcss": "^4.1.3",
     "vite-plugin-mkcert": "^1"
   },
   "devDependencies": {
@@ -28,6 +30,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^6",
