--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9",
+    "@types/node": "^20.11.24",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.3.1",
@@ -35,6 +36,7 @@
     "typescript": "^5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^6",
+    "vite-plugin-dynamic-import": "^1.6.0",
     "vite-plugin-framer": "^1"
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
