--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@framer-plugin/shared": "workspace:*",
     "@tailwindcss/vite": "^4.1.3",
+    "clsx": "^2.1.1",
     "framer-plugin": "^3",
+    "motion": "^12.9.2",
     "react": "^18",
     "react-dom": "^18",
     "replicate": "^1.0.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
+    "tailwindcss-animate": "^1.0.7",
     "vite-plugin-mkcert": "^1"
   },
   "devDependencies": {
