--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "clsx": "^2.1.1",
     "framer-plugin": "^3",
+    "immer": "^10.1.1",
     "motion": "^12.9.2",
     "react": "^18",
     "react-dom": "^18",
@@ -22,7 +23,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-mkcert": "^1"
+    "vite-plugin-mkcert": "^1",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9",
