--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@framer-plugin/shared": "workspace:*",
     "@tailwindcss/vite": "^4.1.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-plugin": "^3",
     "immer": "^10.1.1",
     "motion": "^12.9.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-otp-input": "^3.1.1",
     "replicate": "^1.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
